Factored out product-create, product-purchase, and user-info apis (#55)
* sets up single api for producers to retail stream (may decide to locate elsewhere later, but lives with stream for moment).  todo set up the writing lambda behind the endpoint and a dynamodb for the schema against which endpoint needs to validate write requests

* added in lambda to back up writing endpoint.  valiudation to loop through all known schema.  still todo to store the schema somewhere else and not just list them in the code.

* changes to website to use new endpoint

* notes from exploring user info.  this has a few resources and roles that aren't being used.  of the ones that are, some policies within are not being used.  believe this should also be absorbed into single endpoint, but if it turns out that it needs to remain, should still trim off the code for unused resources.

* brought userInfoApi into the fold

* machete.  added version numbers in retail stream roles. removed unnecessary photo role.

* remove empty files

* removed removed services from deploy scripts.  remove CatoalogReaderRole from webapp

* Improve automated login on homepage.
Fixed issue with create product values having an extra character for a new product.
Removed deploy-web-app-plugin files which were used for reference, but not intended to be in project.

* Switched React router to use hashHistory instead of browserHistory, which allows the page to refresh and properly return the user to the correct location in the app.

* Removed unused devDependency.

* per Greg

* add in an install for the single api

* variable names fixed

* Removed unused devDependency.

* eslint 2

* cleanup per Erik

--- a/event-writer/serverless.yml
+++ b/event-writer/serverless.yml
@@ -1,19 +1,17 @@
 frameworkVersion: '>=1.0.0 <2.0.0'
 
-service: ${self:custom.helloRetail.name}-product-purchase-api
-
-# TODO: Consider enforcing schema versions
+service: ${self:custom.helloRetail.name}-event-writer-api
 
 custom:
   stage: ${opt:stage, self:provider.stage, self:custom.private.stage}
-  private: ${file(../../private.yml)}
-  helloRetail: ${file(../../helloRetail.yml)}
+  private: ${file(../private.yml)}
+  helloRetail: ${file(../helloRetail.yml)}
+  retailStream: ${file(../retail-stream/serverless.yml)}
   retailStreamVersion: 1
-  retailStream: ${file(../../retail-stream/serverless.yml)}
-  productPurchaseApiVersion: 1
-  productPurchaseApi: ${self:}
+  eventWriterApiVersion: 1 # The version of this service to depend upon
+  eventWriterApi: ${self:} # externally, use `${file(~/event-writer/serverless.yml)}`, replacing the `~` therein with the appropriate relative reference [e.g. '..' or '../..']
   # Exports
-  exportProductPurchaseRestApi: ${self:custom.productPurchaseApi.service}:${self:custom.stage}:ProductPurchaseRestApi${self:custom.productPurchaseApiVersion}
+  exportEventWriterRestApi: ${self:custom.eventWriterApi.service}:${self:custom.stage}:EventWriterRestApi:${self:custom.eventWriterApiVersion}
 
 provider:
   name: aws
@@ -21,18 +19,20 @@ provider:
   runtime: nodejs4.3
   profile: ${self:custom.private.profile}
   region: ${self:custom.private.region}
+  environment:
+    STAGE: ${self:custom.stage}
 
 functions:
-  productPurchase:
+  eventWriter:
     role:
-      Fn::GetAtt: [ ProductPurchaseWriter, Arn ]
-    handler: productPurchaseApi.productPurchase
+      Fn::GetAtt: [ EventWriter, Arn ]
+    handler: eventWriterApi.eventWriter
     environment:
       STREAM_NAME:
         Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamName}
     events:
       - http:
-          path: product-purchase
+          path: event-writer
           method: post
           cors:
             origins:
@@ -49,25 +49,24 @@ functions:
 resources:
   Resources:
     # Log Group
-    ProductPurchaseLogGroup:
+    EventWriterLogGroup:
       Type: AWS::Logs::LogGroup
       Properties:
-        LogGroupName: /aws/lambda/${self:service}-${self:custom.stage}-productPurchase
+        LogGroupName: /aws/lambda/${self:service}-${self:custom.stage}-eventWriter
         RetentionInDays: 7
 
-    # User Information Roles
-    ProductPurchaseWriter: # role for the Product Purchase Lambda to write to logs and to a retail stream deployed in the same account
+    EventWriter: # role for the Event Writer Lambda to write to logs and the Kinesis Stream (retailStream)
       Type: AWS::IAM::Role
       Properties:
         Path: /
-        RoleName: ${self:custom.stage}ProductPurchaseWriter${self:custom.productPurchaseApiVersion}
+        RoleName: ${self:custom.stage}EventWriter${self:custom.eventWriterApiVersion}
         AssumeRolePolicyDocument:
           Version: '2012-10-17'
           Statement:
             - Effect: Allow
               Action: sts:AssumeRole
               Principal:
-                Service: lambda.amazonaws.com
+                Service: 'lambda.amazonaws.com'
         ManagedPolicyArns:
           - ${self:custom.private.teamPolicy}
         Policies:
@@ -75,38 +74,29 @@ resources:
             PolicyDocument:
               Version: '2012-10-17'
               Statement:
-                - Effect: Allow
+                - Effect: 'Allow'
                   Action:
                     - 'logs:CreateLogStream'
-                  Resource:
-                    Fn::GetAtt: [ ProductPurchaseLogGroup, Arn ]
-                - Effect: Allow
-                  Action:
                     - 'logs:PutLogEvents'
                   Resource:
                     - Fn::Join:
                       - ':'
-                      - - Fn::GetAtt: [ ProductPurchaseLogGroup, Arn ]
+                      - - Fn::GetAtt: [ EventWriterLogGroup, Arn ]
                         - '*'
           - PolicyName: WriteToKinesis
             PolicyDocument:
               Version: '2012-10-17'
               Statement:
-                - Effect: Allow
+                - Effect: 'Allow'
                   Action:
                     - 'kinesis:PutRecord'
                   Resource:
                     Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamArn}
 
-# NOTE: This named gleaned from SLS generated CF template
-#    ApiGatewayMethodUserDashinfoPost:
-#      Properties:
-#        AuthorizationType: AWS_IAM
-
   Outputs:
-    ProductPurchaseRestApi:
-      Description: API used to submit product purchase events
+    EventWriterRestApi:
+      Description: API used to submit producer events to the Kinesis Stream
       Value:
         Ref: ApiGatewayRestApi
       Export:
-        Name: ${self:custom.productPurchaseApi.custom.exportProductPurchaseRestApi}
+        Name: ${self:custom.eventWriterApi.custom.exportEventWriterRestApi}
