--- a/product-photos/0.processor/package.json
+++ b/product-photos/0.processor/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hello-retail-product-photos-execute",
+  "name": "hello-retail-product-photos-processor",
   "version": "0.0.1",
   "description": "A stream processor that executes a step function to obtaina photo for each new product",
-  "main": "execute.js",
+  "main": "processor.js",
   "scripts": {
     "test": "echo \"Error: tests executed by root hello-retail package.json\" && exit 1"
   },
