--- a/product-photos/0.processor/serverless.yml
+++ b/product-photos/0.processor/serverless.yml
@@ -1,6 +1,6 @@
 frameworkVersion: '>=1.0.0 <2.0.0'
 
-service: ${self:custom.productPhotos.executeName}
+service: ${self:custom.productPhotos.processorName}
 
 custom:
   stage: ${opt:stage, self:provider.stage, self:custom.private.stage}
@@ -18,13 +18,15 @@ provider:
   region: ${self:custom.private.region}
 
 functions:
-  execute:
+  processor:
     role:
-      'Fn::GetAtt': [ ExecuteRole, Arn ]
-    handler: execute.processKinesisEvent
+      'Fn::GetAtt': [ ProcessorRole, Arn ]
+    handler: processor.processKinesisEvent
     environment:
       STEP_FUNCTION:
         'Fn::ImportValue': ${self:custom.productPhotos.exportPhotoAssignmentsStepFunctionArn}
+      TABLE_PHOTO_REGISTRATIONS_NAME:
+        'Fn::ImportValue': ${self:custom.productPhotos.exportPhotoRegistrationsTableName}
     events:
       - stream:
           arn: 'arn:aws:kinesis:${self:provider.region}:${self:custom.private.accountId}:stream/${self:custom.stage}RetailStream' # replace this with the below, once supported by Serverless
@@ -35,17 +37,17 @@ functions:
 resources:
   Resources:
     # Log Group
-    ExecuteLogGroup:
+    ProcessorLogGroup:
       Type: AWS::Logs::LogGroup
       Properties:
-        LogGroupName: '/aws/lambda/${self:service}-${self:custom.stage}-execute'
+        LogGroupName: '/aws/lambda/${self:service}-${self:custom.stage}-processor'
         RetentionInDays: 7
     # Role
-    ExecuteRole: # role for the photo assignment step function execution kick-off lambda
+    ProcessorRole: # role for the photo assignment step function execution kick-off lambda
       Type: AWS::IAM::Role
       Properties:
         Path: /
-        RoleName: ${self:custom.stage}ProductPhotosExecute${self:custom.productPhotos.productPhotosVersion}
+        RoleName: ${self:custom.stage}ProductPhotosProcessor${self:custom.productPhotos.productPhotosVersion}
         AssumeRolePolicyDocument:
           Version: '2012-10-17'
           Statement:
@@ -64,14 +66,14 @@ resources:
                   Action:
                     - 'logs:CreateLogStream'
                   Resource:
-                    'Fn::GetAtt': [ ExecuteLogGroup, Arn ]
+                    'Fn::GetAtt': [ ProcessorLogGroup, Arn ]
                 - Effect: Allow
                   Action:
                     - 'logs:PutLogEvents'
                   Resource:
                     'Fn::Join':
                       - ':'
-                      - - 'Fn::GetAtt': [ ExecuteLogGroup, Arn ]
+                      - - 'Fn::GetAtt': [ ProcessorLogGroup, Arn ]
                         - '*'
           - PolicyName: ReadFromKinesis
             PolicyDocument:
@@ -85,6 +87,8 @@ resources:
                     - 'kinesis:ListStreams'
                   Resource:
                     Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamArn}
+          - ${self:custom.productPhotos.putPhotoRegistrations}
+          - ${self:custom.productPhotos.updatePhotoRegistrations}
           - PolicyName: ExecuteStepFunction  # see https://forums.aws.amazon.com/thread.jspa?messageID=755476&tstart=0 for StepFunction IAM docs
             PolicyDocument:
               Version: '2012-10-17'
