--- a/web/serverless.yml
+++ b/web/serverless.yml
@@ -14,8 +14,8 @@ custom:
         - Ref: HelloRetailWebBucket
         - '/*'
 
-  oAuthClientId: amzn1.application-oa2-client.d38cc5e49f9343b5b7a718f9d21fc93a
-  oAuthAppId: amzn1.application.0bfd7ce688a440a1ad215923053e1ec6
+  oAuthClientId: ${self:custom.private.loginWithAmazonClientId}
+  oAuthAppId: ${self:custom.private.loginWithAmazonAppId}
 
   # Domain name for CloudFront distribution.
   cloudFrontDomainName:
