Change Assignments per Registration
For the demo environment only.
!!! WARNING: !!!
This requires a hack to the local ``~/product-photos/0.processor/node_modules/kinesis-handler/lib/kinesisHandler.js`, adding:
```
              parsed.eventId = record.eventID // TODO hack to be fixed by using stream syndication
```
at line 166 (just after the payload is parsed)

--- a/product-photos/0.processor/serverless.yml
+++ b/product-photos/0.processor/serverless.yml
@@ -23,6 +23,7 @@ functions:
       'Fn::GetAtt': [ ProcessorRole, Arn ]
     handler: processor.processKinesisEvent
     environment:
+      STAGE: ${self:custom.stage}
       STEP_FUNCTION:
         'Fn::ImportValue': ${self:custom.productPhotos.exportPhotoAssignmentsStepFunctionArn}
       TABLE_PHOTO_REGISTRATIONS_NAME:
