Changes to use new version of kinesis-handler that allows a transformation of the payload to include info from the record (#83)
* Changes to use new version of kinesis-handler.  Once those go to master, package.json should be update.

* egress-schema

--- a/product-photos/0.processor/package.json
+++ b/product-photos/0.processor/package.json
@@ -13,6 +13,6 @@
   },
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
-    "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git"
+    "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git#add-transformer"
   }
 }
