--- a/product-catalog/api/package.json
+++ b/product-catalog/api/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/Nordstrom/hello-retail/product-catalog#readme",
   "dependencies": {
-    "ajv": "^4.10.4"
+    "ajv": "^4.10.4",
+    "aws-xray-sdk": "^1.1.1"
   }
 }
