--- a/product-photos/0.processor/package.json
+++ b/product-photos/0.processor/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
+    "aws-xray-sdk": "^1.1.1",
     "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git"
   }
 }
