--- a/product-photos/1.assign/package.json
+++ b/product-photos/1.assign/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
+    "aws-xray-sdk": "^1.1.1",
     "bluebird": "^3.5.0"
   }
 }
