--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "log",
     "processing"
   ],
-  "author": "Nordstrom",
+  "author": "Nordstrom, Inc.",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Nordstrom/hello-retail/issues"
