--- a/package.json
+++ b/package.json
@@ -107,18 +107,21 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
+    "css-loader": "^0.28.4",
     "enzyme": "^2.7.0",
     "eslint": "^3.14.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
+    "foundation-sites": "^6.3.1",
     "https-proxy-agent": "^1.0.0",
     "inquirer": "^3.1.0",
-    "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git",
+    "jquery": "^3.2.1",
     "js-yaml": "^3.7.0",
     "jsdom": "^9.9.1",
     "json-loader": "^0.5.4",
+    "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git",
     "loadjs": "^3.3.1",
     "mocha": "^3.0.2",
     "pre-commit": "^1.1.3",
@@ -126,7 +129,9 @@
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15",
     "react-router": "^3.0.2",
+    "script-loader": "^0.7.0",
     "serverless": "^1.4.0",
+    "style-loader": "^0.18.2",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
