* Remove conflicting Bootstrap CSS. * Restyle of page headers. * User name now included as part of Navigation component. * Added instructions on Photographer registration page.

--- a/web/serverless.yml
+++ b/web/serverless.yml
@@ -79,7 +79,7 @@ custom:
   webAppBuild:
     configPath: ./config.js
     configValues:
-      WebAppName: Hello Retail
+      WebAppName: Hello, Retail!
       Stage: ${self:custom.stage}
       AuthClientId: ${self:custom.oAuthClientId}
       AWSRegion: ${self:custom.private.region}
