Removed all references to twilio from unmessage lambda.

--- a/product-photos/5.unmessage/package.json
+++ b/product-photos/5.unmessage/package.json
@@ -13,7 +13,6 @@
   },
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
-    "bluebird": "^3.4.7",
-    "twilio": "^2.11.1"
+    "bluebird": "^3.4.7"
   }
 }
