--- a/product-photos/3.receive/package.json
+++ b/product-photos/3.receive/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "ajv": "^4.11.3",
     "bluebird": "^3.4.7",
-    "got": "^6.7.1",
-    "twilio": "^2.11.1"
+    "got": "^6.7.1"
   }
 }
