message lambda - send emails instead of sms

--- a/product-photos/2.message/package.json
+++ b/product-photos/2.message/package.json
@@ -14,5 +14,6 @@
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
     "bluebird": "^3.4.7",
+    "nodemailer": "^4.1.3"
   }
 }
