--- a/product-photos/5.unmessage/package.json
+++ b/product-photos/5.unmessage/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
-    "bluebird": "^3.4.7"
+    "bluebird": "^3.4.7",
+    "nodemailer": "^4.1.3"
   }
 }
