--- a/product-catalog/builder/package.json
+++ b/product-catalog/builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hello-retail-product-catalog-builder",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A stream processor that accumulates a catalog of our latest best knowledge regarding each product",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/Nordstrom/hello-retail/product-catalog#readme",
   "dependencies": {
-    "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git"
+    "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git",
+    "kv-store": "file:../../../serverless-ifc/src/kv-store"
   }
 }
