--- a/product-photos/3.receive/package.json
+++ b/product-photos/3.receive/package.json
@@ -1,6 +1,6 @@
 {
   "name": "receive",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
   "main": "recevie.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "ajv": "^4.11.3",
     "bluebird": "^3.4.7",
-    "got": "^6.7.1"
+    "got": "^6.7.1",
+    "kv-store": "file:../../../serverless-ifc/src/kv-store"
   }
 }
