--- a/product-photos/0.processor/package.json
+++ b/product-photos/0.processor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hello-retail-product-photos-processor",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A stream processor that executes a step function to obtaina photo for each new product",
   "main": "processor.js",
   "scripts": {
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
-    "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git"
+    "kinesis-handler": "git+https://github.com/Nordstrom/kinesis-handler.git",
+    "kv-store": "file:../../../serverless-ifc/src/kv-store"
   }
 }
