Migrating DDB -> KV

--- a/product-photos/1.assign/package.json
+++ b/product-photos/1.assign/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assign-photographer",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A Lambda function for assigning a photographer to take a product image.",
   "main": "assign.js",
   "scripts": {
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
-    "bluebird": "^3.5.0"
+    "bluebird": "^3.5.0",
+    "kv-store": "file:../../../serverless-ifc/src/kv-store"
   }
 }
